TWC3119-877: Fix PTE grid resize on LNAV collapse (#2760)
* TWC3119-877: LNAV Component and PTE Component cleanup/formatting

* TWC3119-877: Updated CSS to auto-resize PTE grid on resize/LNAV collapse

--- a/Intel.MyDeals/Client/src/app/contract/pricingTableEditor/pricingTableEditor.component.css
+++ b/Intel.MyDeals/Client/src/app/contract/pricingTableEditor/pricingTableEditor.component.css
@@ -519,11 +519,12 @@ kendo-tabstrip.tabs-coll {
 }
 
 #spreadsheet .wtHolder {
-    height: 100% !important
+    height: 100% !important;
+    width: -webkit-fill-available !important;
 }
 
 #spreadsheet .ht_master.handsontable {
-    height: 100%
+    height: 100%;
 }
 
 #spreadsheet .wtBorder.current {
